--- a/app/src/main/res/layout/bottom_sheet_recipes.xml
+++ b/app/src/main/res/layout/bottom_sheet_recipes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/cardBackGroundColor"
     tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:text="@string/meal_type"
-        android:textColor="@color/dark"
+        android:textColor="@color/titleColor"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:text="@string/diet_type"
-        android:textColor="@color/dark"
+        android:textColor="@color/titleColor"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -280,6 +280,7 @@
         android:layout_marginBottom="24dp"
         style="@style/Widget.MaterialComponents.Button"
         android:text="@string/apply"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
