--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,9 +24,9 @@
 
     <!-- Custom chip -->
     <style name="CustomChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
-        <item name="chipBackgroundColor">@color/chipBackgroundColor</item>
-        <item name="android:textColor">@color/chipTextColor</item>
-        <item name="checkedIconTint">@color/chipTextColor</item>
+        <item name="chipBackgroundColor">@color/chip_background_color</item>
+        <item name="android:textColor">@color/chip_text_color</item>
+        <item name="checkedIconTint">@color/chip_text_color</item>
     </style>
 
     <!-- DetailsActivity -->
